# radar_fundamentalista_b3

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRD.md  README.md  _env.json  compare_data_scores.py  data.json  deployment-data-contract.md  export_ativos.json  export_fiagros.csv  export_fiis.csv  export_stocks.csv  export_top_picks.json  git-reorg-and-deploy.md  index-v2.html  index.html  iniciar_app.bat  manifest.json  pages-history-persistence.md  pyproject.toml  requirements.txt  serve_https.py  service-worker.js  start.bat  start.sh
.github/workflows/: daily-pipeline.yml
assets/: dashboard.css  dashboard.js
brapi_mvp/: run_mvp.py
config/: indices.json  tesouro_purchase_catalog.json  tickers.json
data/: export_ativos.json  fiagro_dy.json  fiagro_vpa.json  fii_dy.json  fii_vpa.json  status.json  tesouro_history.json  ticker_mappings.json
dev/: export_ativos.json  export_fiagros.csv  export_fiis.csv  export_stocks.csv  export_top_picks.json  index-classic.html  index-v2.html  index.html
dev/assets/: dashboard.css  (+1 more)
docs/: ANALYSIS_RULES_SPECIFICATION.md  ARCHITECTURE.md  README.md  SCORE_RULES.md  TEST_SPECIFICATION.md  UI_UX_SPECIFICATION.md  tesouro_improvement_suggestions.md
hgbrasil_mvp/: run_mvp.py
scripts/: analyze_top_picks.py  bootstrap_tesouro_history.py  query_top_assets.py  schedule_unix.sh  schedule_windows.bat  validate_pages_artifact.py
src/: __init__.py  analyzer.py  cvm_updater.py  database.py  exporter.py  generator.py  ingestion.py  macro_fetcher.py  pipeline.py  server.py  sources.py  tesouro_analyzer.py  test_yf.py
(+48 files in other folders)
