[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "radar-fundamentalista-b3"
version = "2.1.1"
description = "Análise fundamentalista de ações, FIIs e FIAGROs da B3 com dashboard estático"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "jinja2>=3.1.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/seu-usuario/investor"
Source = "https://github.com/seu-usuario/investor"

[tool.setuptools.packages.find]
where = ["src"]
